David Pakman Show: regulatory capture.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1964,6 +1964,25 @@
         where he said that he never realized that he was &hellip; that he would be so good at killing people.</q>
         <!-- Jimmy Dore goes on to comment that Obama repealed Habeas Corpus when he signed the National Defence Authorization Act, section 1021, which says that all the government needs to do is call you a terrorist and they can thrown you in jail without trial. We are now operating under a liberty view from the 1100s.-->
       </li>
+      <li>David Pakman Show:
+        <a href="https://www.youtube.com/watch?v=qUFrCHJ0hAg">More Than 50% of Trump Nominees Tied to Industry They’re Supposed to Regulate</a>
+        (YouTube, 5 minutes, 09.11.2017). Even though Trump promised to stop the &ldquo;revolving doors&rdquo;
+        between politics and industry and would not be appointing corporate lobbyists and other corporate insiders,
+        this is precisely what he has been doing.
+        This is an example of <a href="https://en.wikipedia.org/wiki/Regulatory_capture"><dfn>regulatory capture</dfn></a>,
+        which Wikipedia defines as follows:
+        <blockquote cite="https://en.wikipedia.org/w/index.php?title=Regulatory_capture&oldid=804562364">
+          <p>Regulatory capture is a form of government failure that occurs when a regulatory agency, created to act in the public interest, instead advances the commercial or political concerns of special interest groups that dominate the industry or sector it is charged with regulating. 
+            When regulatory capture occurs, the interests of firms or political groups are prioritized over the interests of the public, leading to a net loss to society as a whole. Government agencies suffering regulatory capture are called "captured agencies".
+          </p>
+        </blockquote>
+        See also: Lachlan Markay &amp; Sam Stein:
+        <a href="https://www.thedailybeast.com/donald-trump-pledged-to-drain-the-swamp-instead-he-filled-it-with-industry-sharks">Swamp Things: More Than 50% of President Trump’s Nominees Have Ties to the Industries They’re Supposed to Regulate</a>,
+        <i class="website">The Daily Beast</i>, 29.10.2017.
+        <br />Lachlan Markay
+        <a href="https://www.thedailybeast.com/trump-claims-takes-a-premature-victory-lap-or-two-in-his-fight-against-the-swamp">Trump Claims Takes a Premature Victory Lap, or Two, in His Fight Against ‘The Swamp’</a>,
+        <i class="website">The Daily Beast</i>, 02.11.2017.
+      </li>
     </ul>
 
     <h3>The War Machine</h3>
