Beuth: Die Automaten brauchen Aufsicht.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -142,6 +142,10 @@
         <br />This blog post is based on the
         <a href="https://ainowinstitute.org/AI_Now_2017_Report.pdf"><abbr>AI</abbr> Now Report 2017 (<abbr>PDF</abbr>)</a>.
       </li>
+      <li lang="de">Beuth, Patrick:
+        <a href="http://www.zeit.de/digital/internet/2017-10/kuenstliche-intelligenz-deepmind-back-box-regulierung/komplettansicht">Die Automaten brauchen Aufsicht</a>,
+        <i class="newspaper">Zeit Online</i>, 25.10.2017.
+      </li>
       <li>Sample, Ian:
         <a href="https://www.theguardian.com/science/2017/nov/01/artificial-intelligence-risks-gm-style-public-backlash-experts-warn">Artificial intelligence risks <abbr>GM</abbr>-style public backlash, experts warn</a>,
         <i class="newspaper">The Guardian</i>, 01.11.2017. Quote:
