Bias in machine learing - on Flipboard.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -108,6 +108,10 @@
         <a href="https://motherboard.vice.com/en_us/article/j5jmj8/google-artificial-intelligence-bias">Google’s Sentiment Analyzer Thinks Being Gay Is Bad</a>,
         <i class="website">Motherboard</i>, 25.10.2017.
       </li>
+      <li>
+        <a href="https://flipboard.com/@becomingdatasci/bias-in-machine-learning-rv7p7r9rz">Bias in machine learning: Articles about Bias in Machine Learning Algorithms / Data Science, and how to combat it</a>
+        on Flipboard.com.
+      </li>
       <!--
       <li>
         <a href=""></a>
