--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -108,6 +108,10 @@
         <a href="https://motherboard.vice.com/en_us/article/j5jmj8/google-artificial-intelligence-bias">Google’s Sentiment Analyzer Thinks Being Gay Is Bad</a>,
         <i class="website">Motherboard</i>, 25.10.2017.
       </li>
+      <li>Caruana, Rich:
+        <a href="https://www.ischool.berkeley.edu/events/2017/friends-dont-let-friends-deploy-black-box-models-importance-intelligibility-machine">Friends Don’t Let Friends Deploy Black-Box Models: The Importance of Intelligibility in Machine Learning for Bias Detection and Prevention</a>,
+        Berkeley School of Information, <abbr>UC</abbr> Berkeley, 08.11.2017. (Recording of a lecture; 90 minutes.)
+      </li>
       <li>
         <a href="https://flipboard.com/@becomingdatasci/bias-in-machine-learning-rv7p7r9rz">Bias in machine learning: Articles about Bias in Machine Learning Algorithms / Data Science, and how to combat it</a>
         on Flipboard.com.
