--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -217,6 +217,10 @@
         <i class="blog">KDNuggets blog</i>, August 2017.
         <!--@@what happened to the other parts?-->
       </li>
+      <li>Matsakis, Louise:
+        <a href="https://motherboard.vice.com/en_us/article/59ydmx/copyright-law-artificial-intelligence-bias">Copyright Law Makes Artificial Intelligence Bias Worse. But it could be used to help fix the problem too</a>,
+        <i class="website">Motherboard</i>, 31.10.2017.
+      </li>
     </ul>
 
   </main>
