Feinstein: The Shadow World.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2004,6 +2004,16 @@
         The Jimmy Dore Show: <a href="https://www.youtube.com/watch?v=jdI9OZ-4QZQ"><abbr>CIA</abbr> Whistleblower Reveals <abbr>CIA</abbr> Still Torturing - Here's How</a>
         (31.10.2017).
       </li>
+      <li>Feinstein, Andrew: <i class="booktitle">The Shadow World: Inside the Global Arms Trade</i>. Penguin, 2012. 
+        <a href="https://www.penguin.co.uk/books/56787/the-shadow-world/"><abbr>ISBN</abbr> 9780141040059</a>.
+        <br />On the occasion of the Code Pink summit.
+        <a href="https://en.wikipedia.org/wiki/Andrew_Feinstein">Andrew Feinstein</a> 
+        also called for divestment from the arms industry:
+        <a href="https://www.youtube.com/watch?v=urA1wquvuuA">Worldwide Warfare Will End When We Divest From the Arms Industry</a>
+        (TheRealNews, YouTube, 11.11.2017).
+        See also Code Pink's campaign <a href="http://www.codepink.org/divest">Divest from the War Machine</a>.
+        <!-- https://duckduckgo.com/?q=feinstein+%22shadow+wars%22&ia=videos -->
+      </li>                                   
       <!--
       <li><a href=""></a></li>
       <li><a href=""></a></li>
