Chalmers lecture Royal Instit. Philosophy 2013.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -240,7 +240,7 @@
         <i class="magazine"><abbr title="Times Literary Supplement">TLS</abbr></i>, 01.09.2017.
         <!--@@PDF-->
       </li>
-      <li><i class="magazine">Philosophy Now</i>: 
+      <li><i class="magazine">Philosophy Now</i>:
         <a href="https://philosophynow.org/categories/Themed_Articles/Socrates_Plato_and_Modern_Life">Themed Articles: Socrates, Plato and Modern Life</a>.
         <!--@@PDF-->
       </li>
@@ -708,10 +708,11 @@
             Mike Archbold writes: "Without Aristotle there would have been no syllogism. Without syllogisms there wouldn't even be the simplest form of AI, which would have no way of forward chaining." 
         -->
       </li>
-      <!--li>David Chalmers:
-        <a href="https://www.youtube.com/watch?v=uUfz6oahp2Q">Why Isn't There
-        More Progress in Philosophy?</a> (55 minutes, Annual Lecture at @@
-      </li-->
+      <li>David Chalmers:
+        <a href="https://www.youtube.com/watch?v=uUfz6oahp2Q">Why Isn't There More Progress in Philosophy?</a> 
+        (YouTube, 55 minutes, 19.12.2013): Annual Lecture at Royal Institute of Philosphy, 2013.
+        <!--@@todo summarize-->
+      </li>
     </ul>
 
     <h2>Professional or Academic Philosophy</h2>
