Tillerson & Mattis about AUMF.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2014,8 +2014,18 @@
         See also Code Pink's campaign <a href="http://www.codepink.org/divest">Divest from the War Machine</a>.
         <!-- https://duckduckgo.com/?q=feinstein+%22shadow+wars%22&ia=videos -->
       </li>                                   
+      <li>
+        <a href="https://www.rt.com/usa/408263-tillerson-mattis-aumf-military-force-authorization/">Tillerson, Mattis call for unlimited war authority if 2001 <abbr title="Authorization for Use of Military Force">AUMF</abbr> replaced</a>,
+        <i class="website"><abbr>RT</abbr></i>, 30.10.2017 (updated 31.10.2017); quote:
+        <q>If Congress decides to pass a new authorization for use of military force, Secretary of State Rex Tillerson and Defense Secretary James Mattis ask that the war authority be unlimited in its time and geographic reach.</q>
+        <br />See also: Secular Talk:
+        <a href="https://www.youtube.com/watch?v=JMdk6rcoILQ">Trump Admin: We Can Do Endless Wár Wherever We Want</a>
+        (YouTube, 11 minutes, 31.10.2017).
+      </li>
       <!--
-      <li><a href=""></a></li>
+      <li>
+        <a href=""></a>
+      </li>
       <li><a href=""></a></li>
       -->
       <!--
