Subrena Smith: Why philosophy in science edu.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -240,6 +240,10 @@
         <i class="magazine"><abbr title="Times Literary Supplement">TLS</abbr></i>, 01.09.2017.
         <!--@@PDF-->
       </li>
+      <li>Smith, Subrena E.:
+        <a href="https://aeon.co/ideas/why-philosophy-is-so-important-in-science-education">Why philosophy is so important in science education</a>,
+        <i class="magazine">Aeon</i>, 13.11.2017 (Creative Commons licence).
+      </li>
       <li><i class="magazine">Philosophy Now</i>:
         <a href="https://philosophynow.org/categories/Themed_Articles/Socrates_Plato_and_Modern_Life">Themed Articles: Socrates, Plato and Modern Life</a>.
         <!--@@PDF-->
@@ -480,8 +484,7 @@
         The course consists of 15 videos that are between 15 and 90 minutes long.
         <!-- channel "Theology, Philosophy and Science": https://www.youtube.com/user/godlogicscience/ -->
       </li>
-      <li>
-        Jules Evans: 
+      <li>Evans, Jules: 
         <a href="https://www.youtube.com/watch?v=XuwYvFlNGns">How philosophy can save your life</a>,
         a talk at TEDx Breda, 2013. 
         (Part of this talk is about
@@ -528,7 +531,7 @@
       Below are some resources about progress and knowledge in philosophy.<!-- @@Reword? Some are about why philosophy is still needed. -->
     </p>
     <ul>
-      <li>Richard Carrier:
+      <li>Carrier, Richard:
         <a href="http://www.youtube.com/watch?v=YLvWz9GQ3PQ">Is Philosophy Stupid?</a>
         (on the <a href="https://www.youtube.com/user/HamboneProductions">Skepticon channel</a>).
         This is a video recording of a presentation an the 6th 
@@ -1194,7 +1197,7 @@
       </li>
       <li>Gillian Darley:
         <a href="https://aeon.co/essays/how-gaston-bachelard-gave-the-emotions-of-home-a-philosophy">Intimate spaces / How Gaston Bachelard gave the emotions of home a philosophy</a>,
-        <i class="website">Aeon</i>, 17.10.2017.
+        <i class="magazine">Aeon</i>, 17.10.2017.
       </li>
       <li>
         <a href="https://gastonbachelard.org/" hreflang="fr" lang="fr">Association Internationale Gaston Bachelard</a>.
@@ -1352,7 +1355,7 @@
       </li>
       <li>Nigel Warburton:
         <a href="https://aeon.co/essays/without-conversation-philosophy-is-just-dogma">Talk with me / >Without conversation, philosophy is just dogma</a>,
-        <i class="website">Aeon</i>, no date (September/October 2017).
+        <i class="magazine">Aeon</i>, no date (September/October 2017).
       </li>
       <li>Robert Talisse:
         <a href="https://fivebooks.com/interview/robert-talisse-on-pragmatism/">The best books on Pragmatism</a>,
