URL World Humanities Conference 2017.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -64,8 +64,9 @@
     </blockquote>
 
     <p style="background-color: #FDDB58; padding: 16px;">
-      <strong><a href="http://www.unesco.org/new/en/social-and-human-sciences/themes/most-programme/humanities-and-philosophy/world-humanities-conference/">World Humanities Conference</a>,
+      <strong><a href="http://www.humanities2017.org/en">World Humanities Conference</a>,
       <span lang="fr">Liège</span>, Belgium, 6-12 August 2017.</strong> 
+      <!--http://www.unesco.org/new/en/social-and-human-sciences/themes/most-programme/humanities-and-philosophy/world-humanities-conference/-->
     </p>
 
     <h2>The Humanities</h2>
@@ -509,6 +510,7 @@
       <a href="https://socialmediacollective.org/reading-lists/critical-algorithm-studies/">Critical Algorithm Studies: a Reading List</a>
       on Social Media Collectiv's research blog.
     </p>
+    <!--Nicholas G. Evans' reaction: https://twitter.com/neva9257/status/930492857454088194 -->
 
     <hr />
     <p id="got">The content about <i>Game of Thrones</i> has been moved 
