M. Conradt: Die Welt ist Geist

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -134,6 +134,10 @@
 
     <h2>Links</h2>
     <ul>
+      <li lang="de">Conradt, Michael:
+        <a href="https://www.youtube.com/watch?v=-jaWsJDcXu4">Die Welt ist Geist – Georg Wilhelm Friedrich Hegel</a>
+        (<span lang="en">YouTube, 23 minutes, 04.06.2014).
+      </li>
       <li lang="de">Stadtbibliothek Stuttgart: 
         <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
       </li>
