School of Life: Hegel.

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -138,6 +138,10 @@
         <a href="https://www.youtube.com/watch?v=-jaWsJDcXu4">Die Welt ist Geist – Georg Wilhelm Friedrich Hegel</a>
         (<span lang="en">YouTube, 23 minutes, 04.06.2014).
       </li>
+      <li>The School of Life:
+        <a href="https://www.youtube.com/watch?v=H5JGE3lhuNo">Philosophy – Hegel</a>
+        (YouTube, 7 minutes, 10.07.2015).
+      </li>
       <li lang="de">Stadtbibliothek Stuttgart: 
         <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
       </li>
