--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -277,7 +277,7 @@
           (without calling it mimesis; the study received many comments from anthropologists, economists and philosophers)
           There was even a chimpanzee who refused the grape if the other monkey did not also receive a grape (instead of cucumber)
         (Wants to see if we can create "a morality from the bottom up", i.e. "evolved morality", 
-      Frans de Waal: "Morals Without God", Opinionator, The New York Times, @@.@@.2010: http://opinionator.blogs.nytimes.com/2010/10/17/morals-without-god/ 
+      Frans de Waal: "Morals Without God", Opinionator, The New York Times, 17.10.2010: http://opinionator.blogs.nytimes.com/2010/10/17/morals-without-god/ 
       Dave Miller: "Morality Without Religion?", Apologetics Press, 2005: http://www.apologeticspress.org/apcontent.aspx?category=7&article=1508 
       John Shook: "Morality Without Religion", Center for Inquiry, 03.11.2010. 
       "Morality research sheds light on the origins of religion", Cell Press, 09.02.2010: http://www.sciencedaily.com/releases/2010/02/100208123625.htm 
