Humour: The Philosopher's Restaurant.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1407,6 +1407,40 @@
       1. Aristotle (384-322 BC) 
       Honorable mentions: Immanuel Kant (1724-1804), Baruch Spinoza (1632-1677), Thomas Hobbes (1588-1679), Niccolò Macchiavelli ( 1469-1527), Michel Foucault (1926-1984), Thomas Aquinas (1225-1274), Karl Marx (1818-1883)
     -->
+    <h2>Humour</h2>
+    <h3>The Philosopher's Restaurant</h3>
+    <p>See Nigel Warburton's Twitter question,
+      <a href="https://twitter.com/philosophybites/status/932633898982494209"><q>What food should be served at the Philosophy Bites café?</q></a>.
+      Proposals for things to put on the à la Descartes menu:
+    </p>
+    <ul>
+      <li>Frankfurter School sausages,</li>
+      <li>B. Russell sprouts,</li>
+      <li>deep Freud chicken,</li>
+      <li>Leibniz monado soup,</li>
+      <li>Sausage Rawls,</li>
+      <li>W. D. Ross beef,</li>
+      <li>scrambled egos,</li>
+      <li>Eggs Benedict Spinoza,</li>
+      <li>Hume-ous,</li>
+      <li>Gyges onion rings,</li>
+      <li>Popperoni pizza,</li>
+      <li>Fettucini al-Frege,</li>
+      <li>Ock-ham with parsleymony,</li>
+      <li>Leibniz biscuits,</li>
+      <li><a href="https://www.iga.net/fr/produit/biscuitspapineau/00000_000000005635862069">Papineau biscuits</a>,</li>
+      <li>Plombière Montesquieu,</li>
+      <li>W.V. Quinoa,</li>
+      <li>Carnapés,</li>
+      <li>Derek Parfait,</li>
+      <li>Fou-cault-la (Foucault cola),</li>
+      <li>Merleau(-Ponty) blanc,</li>
+      <li>Hegel bagels,</li>
+      <li>Ryle bread,</li>
+      <li>a selection of Socra-teas,</li>
+      <li>desserts to be chosen from the Sweet Trolley Problem.</li>
+    </ul>
+    <p>Of course, there will be lots of foods for thought and everything will be simply Deleuzious.</p>
   </main>
 
   <footer>
