Stiglitz: Globalization and Its Dicontents Revisited.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1473,10 +1473,9 @@
     <h3>The Shock Doctrine</h3>
     <p>Klein, Naomi:
       <i class="booktitle">The Shock Doctrine: The Rise of Disaster Capitalism</i>.
-      [Metropolitan Books, Henry Holt and Company, 2007]. Penguin Books, 2008.
-      <abbr>ISBN</abbr> 978-0-141-02453-0.
-      <br />
-      See also the documentary
+      Metropolitan Books, Henry Holt and Company, 2007. <a href="https://us.macmillan.com/books/9780312427993"><abbr>ISBN</abbr>  9780312427993</a>. 
+      <br />Penguin Books, 2008. <a href="https://www.penguin.co.uk/books/55595/the-shock-doctrine/"><abbr>ISBN</abbr> 978-0-141-02453-0</a>.
+      <br />See also the documentary
       <a href="https://vimeo.com/26718047">The Shock Doctrine - Naomi Klein (on Vimeo)</a>.
     </p>
     <p>See also:</p>
@@ -1536,7 +1535,12 @@
         Washington <abbr>D.C.</abbr>: Institute for International Economics, 1994.
       </li>
       <li>Stiglitz, Joseph E.:
-        <i class="booktitle">Globalization and its Discontents</i>. New York: W. W. Norton &amp; Company, 2002.
+        <i class="booktitle">Globalization and its Discontents</i>. New York: W. W. Norton &amp; Company, 2002. (304 pages)
+        <a href="http://books.wwnorton.com/books/978-0-393-32439-6/"><abbr>ISBN</abbr> 978-0-393-32439-6</a>.
+      </li>
+      <li>Stiglitz, Joseph E.:
+        <i class="booktitle">Globalization and Its Discontents Revisited: Anti-Globalization in the Era of Trump</i>. New York: W. W. Norton &amp; Company, 2017. (528 pages)
+        <a href="http://books.wwnorton.com/books/978-0-393-35516-1/"><abbr>ISBN</abbr> 978-0-393-35516-1</a>.
       </li>
       <li>Fewsmith, Joseph:
         <i class="booktitle">China Since Tiananmen: The Politics of Transition</i>. Cambridge: Cambrdige University Press, 2001.
@@ -1724,7 +1728,7 @@
       </li>
       <li>Hahnel, Robin:
         <a href="https://www.youtube.com/watch?v=-FZbA7dn8y4">Myths of Neoliberalism</a>
-        (YouTube, 78 minutes, 16.09.2016): video recording of a talk at Imperial Collge London
+        (YouTube, 78 minutes, 16.09.2016): video recording of a talk at Imperial College London
         in December 2014.
       </li>
       <li>
@@ -1765,6 +1769,7 @@
         <a href="http://politybooks.com/bookdetail/?isbn=9780745651200"><abbr>ISBN</abbr> 9780745652214</a>.
         <!-- Colin Crouch also wrote "Post-Democracy": http://politybooks.com/bookdetail/?isbn=9780745633145 -->
       </li>
+      <!-- For neoliberal talking points, see also "Best Reagan Clips from 1980 Carter debate"; ensignbay, 14.12.2008: https://www.youtube.com/watch?v=_9qDRZ6pSRE -->
       <!-- About neoconservatism rather than neoliberalism? Nancy MacLean: "Democracy in Chains: The Deep History of the Radical Right's Stealth Plan for America" Viking, 2017. -->
       <li><span lang="de">Biebricher, Thomas:
         <i class="booktitle">Neoliberalismus zur Einführung</i>. 2. überarbeitete Auflage. Junius</span>.
@@ -2050,6 +2055,9 @@
       <!--
         * PROF. DR. ALBERT A. STAHEL: "Die Zeit nach dem NATO-Abzug aus afghanischer Sicht!", 06.10.2012: http://strategische-studien.com/2012/10/06/die-zeit-nach-dem-nato-abzug-aus-afghanischer-sicht/ 
         * Thomas Barfield: Afghanistan: A Cultural and Political History. Princeton University Press, 2012. 
+        * Secular Talk: "Jimmy Carter Hands John McCain His Ass", 22.11.2014: https://www.youtube.com/watch?v=8OYU0raRvJA 
+        * Murphy, Tim; Raja, Tasneem: "Map: All the Countries John McCain Has Wanted to Attack", Mother Jones, 06.09.2013: http://www.motherjones.com/politics/2013/09/john-mccain-world-attack-map-syria/ 
+        * Carey, Jim: "A Complete History of John McCain Calling for War Around the World", Anti Media, 22.07.2017: http://theantimedia.org/john-mccain-calls-for-war-history/ 
       -->
     </ul>
 
