W. Brown: How Neoliberalism Threatens Democracy.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1764,6 +1764,10 @@
         <i class="booktitle">Undoing the Demos: Neoliberalism's Stealth Revolution</i>. Zone Books (<abbr>MIT</abbr> Press), 2015.
         <a href="https://mitpress.mit.edu/books/undoing-demos"><abbr>ISBN</abbr> 9781935408543</a>.
       </li>
+      <li>Brown, Wendy:
+        <a href="https://www.youtube.com/watch?v=ZMMJ9HqzRcE">How Neoliberalism Threatens Democracy</a>
+        (YouTube, 20 minutes, 25.05.2016): interview about Wendy Brown's book <i class="booktitle">Undoing the Demos</i>.
+      </li>
       <li>Crouch, Colin:
         <i class="booktitle">The Strange Non-death of Neo-liberalism</i>. Polity, 2011. (224 pages)
         <a href="http://politybooks.com/bookdetail/?isbn=9780745651200"><abbr>ISBN</abbr> 9780745652214</a>.
