+ The Two Cultures

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -75,7 +75,7 @@
       are not true sciences.
       This opposition is often expressed as a distinction between 
       <a href="https://en.wikipedia.org/wiki/Hard_and_soft_science">hard and
-      soft science</a> or, as in C. P. Snow's famous book,
+      soft science</a> or, as in C. P. Snow's famous lecture,
       <a href="https://en.wikipedia.org/wiki/The_Two_Cultures" 
       class="booktitle">The Two Cultures</a> (1959).
       Other languages do not make this distinction and
@@ -282,6 +282,43 @@
 
       * H. H. Scullard: A History of the Roman World: 753 to 146 BC. Routledge, 2013. (498 p.) ISBN  9780415522274. https://www.routledge.com/products/9780415522274.
     -->
+
+    <h2 id="two-cultures">The Two Cultures</h2>
+    <p><a href="http://en.wikipedia.org/wiki/The_Two_Cultures">&ldquo;The Two Cultures&rdquo;</a> 
+      is the title of a famous lecture delivered in 1959 by the scientist and novelist 
+      <a href="https://en.wikipedia.org/wiki/C._P._Snow">C. P. Snow</a>.
+      The lecture was about the gulf between the sciences and the humanities.
+      The British literary critic
+      <a href="https://en.wikipedia.org/wiki/F._R._Leavis">F. R. Leavis</a>
+      attacked Snow's statements in a lecture entitled
+      <i class="booktitle">Two Cultures? The Significance of C. P. Snow</i>.
+    </p>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=BYEvSwViGRY">C.P. Snow's The Two Cultures: A Fifty Year Perspective</a>
+        (YouTube, 61 minutes, 02.10.2009).
+        <!-- UMBC ?= University of Maryland, Baltimore County -->
+      </li>
+      <li>du Sautoy, Marcus:
+        <a href="https://www.youtube.com/watch?v=2v3IWGiThKA"> The Two Cultures: A False Dichotomy</a>
+        (YouTube, 18 minutes, 06.01.2012): talk at 
+        <a href="http://previous.tedxoxford.co.uk/"><abbr>TED</abbr>xOxford</a>.
+      </li>
+      <li>Cambridge University Press:
+        <a href="https://www.youtube.com/watch?v=GrGtGKE4oog">Stefan Collini talks about his book 'Two Cultures? The Significance of C. P. Snow'</a>
+        (YouTube, 4 minutes, 14.04.2014).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=fwZqtk-3wMg">Art vs Science: C. P. Snow’s Two Cultures Debate 50 Years on</a>
+        (YouTube, 25 minutes, 20.10.2015): video based on the inaugural talk by
+        Keith Davies at Hatfield's Café Scientifique on 14 September 2015.
+      </li>
+      <!--
+      <li>
+        <a href=""></a>
+      </li>
+      -->
+    </ul>
 
     <h2>A Year of Reading the World</h2>
     <p>In 2011, Ann Morgan, who had grown up with books by British and North-American authors,
