Hegel: Works online.

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -132,6 +132,23 @@
       </li>
     </ul>
 
+    <h2>Works</h2>
+    <ul>
+      <li>
+        <a href="https://www.marxists.org/deutsch/philosophie/hegel/phaenom/index.htm" hreflang="de" lang="de">Phänomenologie des Geistes</a> (1807).
+      </li>
+      <li>Marxists’ Internet Archive:
+        <a href="https://www.marxists.org/deutsch/philosophie/hegel/index.htm">G.W.F. Hegel</a>:
+        links to works (in German) hosted in Marxists.org.
+      </li>
+      <!--@@TODO: more links at bottom of https://www.marxists.org/deutsch/philosophie/hegel/index.htm -->
+      <!--
+      <li>
+        <a href=""></a>
+      </li>
+      -->
+    </ul>
+
     <h2>Links</h2>
     <ul>
       <li lang="de">Conradt, Michael:
