Zavalishina: Teaching Morality to Machines.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -175,6 +175,10 @@
         <a href="https://www.wired.com/story/why-ai-is-still-waiting-for-its-ethics-transplant/">Why Artificial Intelligence Is Still Waiting For Its Ethics Transplant</a>,
         <i class="magazine">Wired</i>, 01.11.2017.
       </li>
+      <li>Zavalishina, Jane:
+        <a href="https://www.cfr.org/blog/teaching-morality-machines">Teaching Morality to Machines</a>,
+        <i class="blog">Council on Foreign Relations blog</i>, 14.11.2017.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
