Brown: In the account of Neoliberalism

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1731,6 +1731,10 @@
         (YouTube, 78 minutes, 16.09.2016): video recording of a talk at Imperial College London
         in December 2014.
       </li>
+      <li>Brown, Wendy:
+        <a href="https://www.youtube.com/watch?v=tqQ_dIjr3uU">In the account of Neoliberalism</a>
+        (YouTube, 59 minutes, 25.01.2017): video recording of a talk at the European Graduate School, Saas-Fee (Switzerland), 13.08.2016.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=Y3huYFfmpIM">Susan George on Neo-Liberalism</a>
         (YouTube, 50 minutes, 09.06.2012).
