--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -55,6 +55,14 @@
   <main>
     <blockquote id="introquote">
       <p>
+        <q cite="https://en.wikipedia.org/wiki/Hitchens%27s_razor">What can be asserted without evidence can be dismissed without evidence.</q>
+        <cite><a href="https://en.wikipedia.org/wiki/Christopher_Hitchens">Christopher Hitchens</a></cite>
+      </p>
+    </blockquote>
+  <!--@@Bil Maher quote -> page about atheism-->
+  <!--
+    <blockquote id="introquote">
+      <p>
         <q cite="https://en.wikiquote.org/wiki/Atheism#19th_century_and_later">Until someone claims to see 
         <a href="https://en.wikipedia.org/wiki/Christopher_Hitchens">Christopher Hitchens'</a> face in a tree stump, 
         idiots must stop claiming that atheism is a religion. 
@@ -65,16 +73,11 @@
     </blockquote>
     <blockquote id="introquote">
       <p>
-        <q cite="https://en.wikipedia.org/wiki/Hitchens%27s_razor">What can be asserted without evidence can be dismissed without evidence.</q>
-        <cite>Christopher Hitchens</cite>
-      </p>
-    </blockquote>
-    <blockquote id="introquote">
-      <p>
         <q cite="https://en.wikiquote.org/wiki/David_Hume#Book_1:_Of_the_understanding">Generally speaking, the errors in religion are dangerous; those in philosophy only ridiculous.</q>
         <cite>David Hume, <i class="booktitle">A Treatise of Human Nature</i> (1739-40)</cite>
       </p>
     </blockquote>
+  -->
 
 
     <h2>What Should Replace Religion?</h2>
