The Best Philosophy Books for Beginners.

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -405,6 +405,11 @@
         <a href="http://philosophy.stackexchange.com/q/2115/23586">How to get started with philosophy without getting overwhelmed quickly?</a>
         is a question on Philosophy Stack Exchange with a dozen different answers.
       </li>
+      <li>
+        <a href="http://www.thereadinglists.com/best-philosophy-books-for-beginners/">The Best Philosophy Books for Beginners</a>,
+        <i class="website">The Reading Lists</i>, 24.11.2017.
+        <!--@@PDF-->
+      </li>
     </ul>
 
   </main>
