THR: Democrate Mega-Donor vs Sanders.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1996,6 +1996,10 @@
         <a href="https://www.thedailybeast.com/trump-claims-takes-a-premature-victory-lap-or-two-in-his-fight-against-the-swamp">Trump Claims Takes a Premature Victory Lap, or Two, in His Fight Against ‘The Swamp’</a>,
         <i class="website">The Daily Beast</i>, 02.11.2017.
       </li>
+      <li>TheHumanistReport:
+        <a href="https://www.youtube.com/watch?v=qxYchhChyPw">Democrat Mega-Donor Lashes Out at Bernie Sanders, Asks if He's “Stupid”</a>
+        (YouTube, 8 minutes, 27.11.2017).
+      </li>
       <li>TheRealNews:
         <a href="https://www.youtube.com/watch?v=oo5Pil-UebU">How Neoliberal Law Enforcement Policies Broke Black Communities by Targeting Women</a>
         (YouTube, 8 minutes, 26.11.2017). Interview with 
