L. Kip Wheeler: Literary Vocabulary.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -369,6 +369,11 @@
         Access requires a
         <a href="http://litguide.press.jhu.edu/about/plans_and_pricing.html">paid subscription</a>.
       </li>
+      <li>L. Kip Wheeler:
+        <a href="http://web.cn.edu/kwheeler/lit_terms.html">Literary Vocabulary</a>:
+        an online glossary of literary terms.
+      </li>
+      <!--@@http://web.cn.edu/kwheeler/resource_rhet.html-->
       <li>
         <a href="http://www.kristisiegel.com/">Dr. Kristi Siegel's website</a>:
         Kristi Siegel is professor of English at Mount Mary University (Milwaukee, Wisconsin).
