Feloni: Billionaire on benefits of philosophy.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -248,6 +248,10 @@
         <a href="https://philosophynow.org/categories/Themed_Articles/Socrates_Plato_and_Modern_Life">Themed Articles: Socrates, Plato and Modern Life</a>.
         <!--@@PDF-->
       </li>
+      <li>Feloni, Richard:
+        <a href="http://uk.businessinsider.com/reid-hoffman-linkedin-credits-success-to-philosophy-education-2017-11?r=US&IR=T&__prclt=rHX1Sczr">Billionaire LinkedIn founder Reid Hoffman says his masters in philosophy has helped him more than an <abbr>MBA</abbr></a>,
+        <i class="magazine">Business Insider</i>, 24.11.2017.
+      </li>
     </ul>
     <!-- Patrick Gentempo: "Unleashing the power of philosophy", TEDxMinot, 2014: uses "philosophy" in a very lose way. And quotes Ayn Rand's posthumous collection of essays "Philosophy: Who Needs It": https://en.wikipedia.org/wiki/Philosophy:_Who_Needs_It & https://www.youtube.com/watch?v=CXFkG34NGkU -->
 
