TheRealNews: Col. Wilkerson on US in Afhanistan.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2079,6 +2079,17 @@
         <br /><a href="http://www.bbc.com/news/uk-politics-10693001">Iraq inquiry: Ex-<abbr>MI5</abbr> boss says war raised terror threat</a>,
         <i class="website"><abbr>BBC</abbr></i>, 20.07.2010.
       </li>
+      <li>TheRealNews:
+        <a href="https://www.youtube.com/watch?v=VvWOUS37LDE">No End to <abbr>US</abbr> Involvement in Afghanistan</a>
+        (YouTube, 3 minutes, 27.11.2017). According to the <a href="https://youtu.be/VvWOUS37LDE?t=2m1s">retired Colonel Wilkerson</a>,
+        the military presence in Afghanistan serves a double purpose:
+        having a military force in Afghanistan (for the next 50 years of necessary) close to China's
+        <a href="https://en.wikipedia.org/wiki/One_Belt_One_Road_Initiative">One Belt One Road Initiative</a>,
+        and to avoid the need to come back from a long distance in order to take care of Pakistan's nuclear weapons
+        in case of instability in that country.
+        (The <abbr>USA</abbr> has its own <a href="https://en.wikipedia.org/wiki/New_Silk_Road_Initiative">New Silk Road Initiative</a>
+        in Central and South Asia.)
+      </li>
       <!--
       <li>
         <a href=""></a>
