Updates: Machine Learning page.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
     <h2 id="updates">Latest Updates</h2>
     <ul>
+      <li>November 2017: new page: <a href="science/machine-learning.html">Machine Learning and Artificial Intelligence</a>.</li>
       <li>January 2016: new page: <a href="philscience/fleck_ludwik.html" lang="de">Ludwik Fleck</a>.</li>
       <li>December 2015: new page: <a href="philosophy/hegel_gwf.html" lang="de">G. W. F. Hegel</a>.
       </li>
