--- a/humanities/index.html
+++ b/humanities/index.html
@@ -363,6 +363,10 @@
 
     <h2>Literature and Literary Theory</h2>
     <ul>
+      <li>Lye, John:
+        <a href="https://brocku.ca/english/jlye/uses.php">On the Uses of Studying Literature</a>,
+        <i class="website">John Lye's Course and Source Page</i>, 1996, 2003.
+      </li>
       <li>
         <a href="http://litguide.press.jhu.edu/index.html">The Johns Hopkins Guide to Literary Theory and Criticism</a>
         is a reference work with entries on literary critics and theorists, critical schools and movements, etcetera.
