Lane: hidden side of clinical trials (TEDx)

--- a/science/index.html
+++ b/science/index.html
@@ -485,6 +485,10 @@
       See also:
     </p>
     <ul>
+      <li>Sile Lane:
+        <a href="https://www.youtube.com/watch?v=-RXrGLolgEc">The hidden side of clinical trials</a>
+        (YouTube, 13 minutes, 28.09.2017): talk at <abbr>TED</abbr>xMadrid, September 2016.
+      </li>
       <li>See the Wikipedia article 
         <a href="https://en.wikipedia.org/wiki/Clinical_trials_registry">Clinical 
         trials registry</a>, which explains what such a registry is and points
