RealNews: If Tillerson's Out ...

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2090,6 +2090,11 @@
         (The <abbr>USA</abbr> has its own <a href="https://en.wikipedia.org/wiki/New_Silk_Road_Initiative">New Silk Road Initiative</a>
         in Central and South Asia.)
       </li>
+      <li>TheRealNews:
+        <a href="https://www.youtube.com/watch?v=LZE5YVOXBWk">If Tillerson's Out, is Iran War In?</a>
+        (YouTube, 13 minutes, 30.11.2017): it looks like false arguments will be used to start a war against Iran,
+        similar to the made-up &ldquo;weapons of mass destruction&rdquo; that were used as an excuse to start a war against Iraq. 
+      </li>
       <!--
       <li>
         <a href=""></a>
