Hoyningen-Huene: Abgrenzung Wissenschaft ....

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -712,7 +712,7 @@
         However, he rejects scientism, <abbr>i.e.</abbr> the position that
         only rigorously scientific knowledge constitutes real knowledge.
       </li>
-      <li>Wilson, Timothy D.: 
+      <li>Wilson, Timothy D.:
         <a href="http://articles.latimes.com/2012/jul/12/opinion/la-oe-wilson-social-sciences-20120712">Stop bullying the 'soft' sciences. The social sciences are just that -- sciences</a>, 
         <i class="newspaper">Los Angeles Times</i>, 12.07.2012.
         <br />Psychology professor Timothy D. Wilson defends the position that psychology is a science and
@@ -804,6 +804,11 @@
         <a href="https://www.edge.org/conversation/thomas_metzinger-benevolent-artificial-anti-natalism-baan">Benevolent Artificial Anti-Natalism (<abbr>BAAN</abbr>)</a>,
         <i class="magazine">Edge</i>, August 2017.
         <!--@@check. philosophy of technology?-->
+      </li>
+      <li>Hoyningen-Huene, Paul:
+        <a href="https://www.youtube.com/watch?v=RJ4OXL8nKbw" lang="de">Zur Abgrenzung von Wissenschaft und Pseudowissenschaft am Beispiel der Homöopathie</a>
+        (YouTube, 15 minutes, 17.01.2017): recording of an invited talk at the conference
+        <span lang="de">Menopause, Andropause, Anti-Aging 2016</span> in Vienna, 09.10.2016.
       </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
