Farr: Apple Maps Abortion - Adoption.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -66,6 +66,10 @@
         <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2687339">Risk, Race, &amp; Recidivism: Predictive Bias and Disparate Impact</a>,
         <i class="website"><abbr>SSRN</abbr></i>, 08.11.2015 (posted), 15.06.2016 (revised).
       </li>
+      <li>Farr, Christina:
+        <a href="https://www.fastcompany.com/3055887/apple-maps-stops-sending-people-searching-for-abortion-to-adoption-centers">Apple Maps Stops Sending People Searching For “Abortion” To Adoption Centers</a>,
+        <i class="website">Fast Company</i>, 28.01.2016.
+      </li>
       <li>Angwin, Julia; Larson, Jeff; Mattu, Surya; Kirchner, Lauren:
         <a href="https://www.propublica.org/article/machine-bias-risk-assessments-in-criminal-sentencing">Machine Bias</a>,
         <i class="website">ProPublica</i>, 23.05.2016.
