Sylvain Rolland; Moral Machine.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -254,6 +254,13 @@
         <a href="https://motherboard.vice.com/en_us/article/59ydmx/copyright-law-artificial-intelligence-bias">Copyright Law Makes Artificial Intelligence Bias Worse. But it could be used to help fix the problem too</a>,
         <i class="website">Motherboard</i>, 31.10.2017.
       </li>
+      <li lang="fr">Rolland, Sylvain:
+        <a href="https://www.latribune.fr/technos-medias/intelligence-artificielle-quelles-pistes-pour-placer-la-france-dans-la-competition-mondiale-759819.html">Intelligence artificielle&nbsp;: quelles pistes pour placer la France dans la compétition mondiale&nbsp;?</a>,
+        <i class="newspaper">La Tribune</i>, 30.11.2017.
+      </li>
+      <li><a href="http://moralmachine.mit.edu/">Moral Machine</a>:
+        <q>A platform for public participation in and discussion of the human perspective on machine-made moral decisions</q>.
+      </li>
     </ul>
 
   </main>
