D. Fagella: AI ethics for business leaders.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -191,6 +191,10 @@
         <a href="https://fivebooks.com/best-books/ethics-artificial-intelligence/"><strong>The best books on Ethics for Artificial Intelligence</strong></a>,
         <i class="website">Five Books</i>, 01.12.2017.
       </li>
+      <li>Faggella, Daniel:
+        <a href="https://www.techemergence.com/ethics-artificial-intelligence-business-leaders/">The Ethics of Artificial Intelligence for Business Leaders – Should Anyone Care?</a>,
+        <i class="website">TechEmergence</i>, 03.12.2017.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
