Inteligencia artificial y ética.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -187,6 +187,10 @@
         <a href="https://www.cfr.org/blog/teaching-morality-machines">Teaching Morality to Machines</a>,
         <i class="blog">Council on Foreign Relations blog</i>, 14.11.2017.
       </li>
+      <li lang="es">Peña Valenzuela, Daniel:
+        <a href="http://dernegocios.uexternado.edu.co/comercio-electronico/inteligencia-artificial-y-etica-by-design/">Inteligencia Artificial y Ética (<span lang="en">By Design</span>)</a>,
+        <i class="blog">Blog de derecho de los negocios</i>, 14.11.2017.
+      </li>
       <li>Boddington, Paula:
         <a href="https://fivebooks.com/best-books/ethics-artificial-intelligence/"><strong>The best books on Ethics for Artificial Intelligence</strong></a>,
         <i class="website">Five Books</i>, 01.12.2017.
