Humour: RoyaInst: Lego Plato's Cave.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1412,6 +1412,12 @@
       Honorable mentions: Immanuel Kant (1724-1804), Baruch Spinoza (1632-1677), Thomas Hobbes (1588-1679), Niccolò Macchiavelli ( 1469-1527), Michel Foucault (1926-1984), Thomas Aquinas (1225-1274), Karl Marx (1818-1883)
     -->
     <h2>Humour</h2>
+    <ul>
+      <li>Royal Institute of Philosophy:
+        <a href="https://twitter.com/RoyalInstPhilos/status/919466354528411649">Lego Plato's Cave</a>
+        (Twitter, 15.10.2017).
+      </li>
+    </ul>
     <h3>The Philosopher's Restaurant</h3>
     <p>See Nigel Warburton's Twitter question,
       <a href="https://twitter.com/philosophybites/status/932633898982494209"><q>What food should be served at the Philosophy Bites café?</q></a>.
